--- a/app/manifest.json
+++ b/app/manifest.json
@@ -15,9 +15,10 @@
   },
 
 
-  "content_security_policy":"script-src 'self' https://twitter.com; object-src 'self'",
-
-
+"background":
+  {
+      "scripts": ["thirdParty/jquery-2.0.3.js", "background.js"]
+  },
   "commands": {
     "_execute_browser_action": {
       "suggested_key": {
